@@ -1,3 +1,8 @@
+2023-12-02         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New test: dbugarray1.
+	* dbugarray1.awk, dbugarray1.in, dbugarray1.ok: New files.
+
 2023-11-28         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): New tests: typeof7 and typeof8.
